<resources>
    <string name="app_name">abdul</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="registratio">Registration</string>
    <string name="Already_Have_a_Acoount">Already Have a Acoount</string>
    <string name="already_have_a_account">Already Have a Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logout">logout</string>
    <string name="fname">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Fisrt_Name">Fisrt Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="address">Address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="welcom_to_smart_lpg_provider">Welcom to Smart LPG Provider</string>
    <string name="View_User_Profile">View User Profile</string>
    <string name="monitor_cylinder_gas_capacity">Monitor Cylinder Gas Capacity</string>
    <string name="apply_for_new_gas_cylinder">Apply For New Gas Cylinder</string>
    <string name="appl">Apply For Exchange Cylinder</string>
    <string name="log_out">Logout</string>
    <string name="Smart_LPG_Provider">Smart LPG Provider</string>
    <string name="smart_lpg_provider">Smart LPG Provider</string>
    <string name="for_complaint_and_queries">For Complaint And Queries</string>
    <string name="Back_to_Home">Back to Home</string>
    <string name="refresh">Refresh</string>
    <string name="submit">Submit</string>
    <string name="enter_your_complain_here">Enter your Complain here</string>
    <string name="cylinder_gas_capacity_level">Cylinder Gas Capacity Level</string>
    <string name="profile_view">Profile View</string>
    <string name="address1">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="pname">-</string>
    <string name="paddress">paddress</string>
    <string name="pphone">pphone</string>
    <string name="pemail">-</string>
    <string name="phone">-</string>
    <string name="adress">-</string>
    <string name="place_order">Place Order</string>
    <string name="back_to_home">Back to Home</string>
    <string name="smart_device_include">Smart Device Include</string>
    <string name="Enter_Cylinder_Size">Enter Cylinder Size</string>
    <string name="enter_cylinder_color_red_yellow_grey">Enter Cylinder Color(Red ,Yellow, Grey)</string>
</resources>