<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lpg"
    android:padding="25dp"
    tools:context=".Dashboard">

    <TextView
        android:layout_width="335dp"
        android:layout_height="154dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/Smart_LPG_Provider"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/user_profile"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/View_User_Profile" />

    <Button
        android:id="@+id/capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/monitor_cylinder_gas_capacity" />

    <Button
        android:id="@+id/newcylinder"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/apply_for_new_gas_cylinder" />

    <Button
        android:id="@+id/exchange"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/appl" />

    <Button
        android:id="@+id/complaint"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/for_complaint_and_queries" />
    <Button
        android:id="@+id/logout"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_out" />



    <!--    <TextView-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="15sp"-->
<!--        android:gravity="center"-->
<!--        android:id="@+id/registrationNow"-->
<!--        android:text="@string/create_new_account"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->



</LinearLayout>