<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lpg"
    android:padding="25dp"
    tools:context=".Login">
    <TextView
        android:layout_width="335dp"
        android:layout_height="154dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="130sp"
        android:gravity="center"
        android:text="@string/Smart_LPG_Provider"
        android:textSize="50sp"
        android:textStyle="bold" />

<!--    <TextView-->
<!--        android:layout_width="335dp"-->
<!--        android:layout_height="154dp"-->
<!--        android:layout_marginTop="1sp"-->
<!--        android:layout_marginBottom="10sp"-->
<!--        android:gravity="top"-->
<!--        android:text="@string/Smart_LPG_Provider"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:text="@string/login" />

    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/registrationNow"
        android:text="@string/create_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>