<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lpg"
    android:padding="25dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UserProfile">

    <TextView
        android:layout_width="335dp"
        android:layout_height="162dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="80sp"
        android:gravity="center"
        android:text="Profile"
        android:textSize="50sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/pname"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/pname"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/pname"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/profile_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="110sp"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_gravity="center"
        android:text="@string/Back_to_Home"
        android:layout_marginBottom="180sp"/>




</LinearLayout>